feat(header-footer): Thêm footer và cấu trúc trang cho tài khoản parent và teacher

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -160,6 +160,9 @@
     "background_sound": "Background music sound",
     "music": "Music",
     "notification": "Notification",
+    "share": "Share",
+    "actions": "Action",
+    "expert_guide": "Expert guide",
     "on": "On",
     "off": "Off",
     "show": "Show",
