--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -160,6 +160,9 @@
     "background_sound": "Âm thanh nhạc nền",
     "music": "Âm nhạc",
     "notification": "Thông báo",
+    "share": "Chia sẻ",
+    "actions": "Hoạt động",
+    "expert_guide": "Chuyên gia",
     "on": "Bật",
     "off": "Tắt",
     "show": "Hiển thị",
