--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -289,7 +289,15 @@
     "no_self_discovery_survey_history": "Chưa có lịch sử khảo sát khám phá bản thân",
     "emotional_survey": "Khảo sát cảm xúc",
     "emotional_survey_history": "Lịch sử khảo sát cảm xúc",
-    "emotional_survey_detail": "Chi tiết khảo sát"
+    "emotional_survey_detail": "Chi tiết khảo sát",
+    "family_dialogue_session": "Buổi đối thoại gia đình",
+    "family_dialogue_session_history": "Lịch sử đối thoại gia đình",
+    "family_dialogue_session_detail": "Chi tiết buổi đối thoại",
+    "family_dialogue_questions": "Câu hỏi đối thoại",
+    "suggested_questions": "Câu hỏi gợi ý",
+    "parent_questions": "Câu hỏi từ phụ huynh",
+    "no_family_dialogue_session_history": "Chưa có lịch sử buổi đối thoại gia đình",
+    "answer_questions": "Gửi câu trả lời"
   },
   "VALIDATE": {
     "phone_required": "Vui lòng nhập vào số điện thoại.",
