feat(rank-page): Ghép BE màn rank-page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -415,5 +415,14 @@
   },
   "CAPTION": {
     "chatbot": "How are you feeling today? Feel free to share with me!"
+  },
+  "AREA_OF_EXPERTISE": {
+    "emotion": "Emotion",
+    "conflict": "Reducing Family Conflicts",
+    "communication": "Improving Communication",
+    "discovery": "Self Discovery"
+  },
+  "ACHIEVEMENT": {
+    "badge_no_achievements_yet": "Chưa có huy hiệu nào trong danh mục này"
   }
 }
