feat(conflict-diary) UI confic diary

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -287,6 +287,17 @@
     "self_discovery_survey_questions": "Self Discovery Survey Questions",
     "discovery_points": "Points",
     "no_self_discovery_survey_history": "No self discovery survey history yet",
+    "conflict_log": "Conflict Log",
+    "conflict_log_list": "Conflict Log List",
+    "conflict_log_detail": "Conflict Log Detail",
+    "conflict_log_form": "Conflict Log Form",
+    "conflict_log_new": "New Conflict Log",
+    "conflict_log_progress": "Update Progress",
+    "conflict_log_solution": "Solution",
+    "conflict_log_status": "Status",
+    "conflict_log_date": "Date",
+    "no_conflict_logs": "No conflict logs available",
+    "no_self_discovery_survey_history": "No self discovery survey history yet",
     "emotional_survey": "Emotional Survey",
     "emotional_survey_history": "Survey History",
     "emotional_survey_detail": "Survey Detail"
@@ -323,6 +334,7 @@
     "complete": "Complete",
     "create_new_survey": "Create New Survey",
     "create_first_survey": "Create Your First Survey",
+    "create_new_log": "Create New Log",
     "select": "Select",
     "share": "Share"
   },
@@ -383,5 +395,44 @@
   },
   "CAPTION": {
     "chatbot": "How are you feeling today? Feel free to share with me!"
+  },
+  "CONFLICT_LOG": {
+    "title_required": "Title is required",
+    "title_min_length": "Title must be at least 5 characters",
+    "title_max_length": "Title must not exceed 100 characters",
+    "description_required": "Description is required",
+    "description_min_length": "Description must be at least 10 characters",
+    "description_max_length": "Description must not exceed 500 characters",
+    "progress_required": "Progress is required",
+    "progress_min": "Progress cannot be less than the current value",
+    "progress_max": "Progress cannot exceed 100%",
+    "progress_description_required": "Progress description is required",
+    "progress_description_min_length": "Progress description must be at least 10 characters",
+    "progress_description_max_length": "Progress description must not exceed 500 characters",
+    "title_label": "Title",
+    "description_label": "Issue Description",
+    "solution_label": "Solution",
+    "progress_label": "Progress (%)",
+    "progress_description_label": "Progress Update Description",
+    "title_placeholder": "Enter conflict issue title",
+    "description_placeholder": "Describe the conflict issue in detail",
+    "solution_placeholder": "Describe the solution to resolve the issue (if any)",
+    "progress_description_placeholder": "Describe the progress in detail",
+    "status_new": "New",
+    "status_in_progress": "In Progress",
+    "status_resolved": "Resolved",
+    "status_unknown": "Unknown",
+    "create_success": "Conflict log created successfully",
+    "update_success": "Progress updated successfully",
+    "cancel_button": "Cancel",
+    "save_log_button": "Save Log",
+    "update_progress_button": "Update Progress",
+    "progress_resolution": "Resolution Progress",
+    "updates_section": "Progress Updates",
+    "solution_section": "Solution",
+    "record_solution": "Record Solution",
+    "update_progress": "Update Progress",
+    "progress_min_value": "0%",
+    "progress_max_value": "100%"
   }
 }
