--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -152,7 +152,56 @@
     "calm": "Bình yên",
     "confused": "Băn khoăn"
   },
+  "CONFLICT_LOG": {
+    "title_required": "Tiêu đề là bắt buộc",
+    "title_min_length": "Tiêu đề phải có ít nhất 5 ký tự",
+    "title_max_length": "Tiêu đề không được vượt quá 100 ký tự",
+    "description_required": "Mô tả là bắt buộc",
+    "description_min_length": "Mô tả phải có ít nhất 10 ký tự",
+    "description_max_length": "Mô tả không được vượt quá 500 ký tự",
+    "progress_required": "Tiến độ là bắt buộc",
+    "progress_min": "Tiến độ không được thấp hơn giá trị hiện tại",
+    "progress_max": "Tiến độ không được vượt quá 100%",
+    "progress_description_required": "Mô tả tiến độ là bắt buộc",
+    "progress_description_min_length": "Mô tả tiến độ phải có ít nhất 10 ký tự",
+    "progress_description_max_length": "Mô tả tiến độ không được vượt quá 500 ký tự",
+    "title_label": "Tiêu đề",
+    "description_label": "Mô tả vấn đề",
+    "solution_label": "Giải pháp",
+    "progress_label": "Tiến độ (%)",
+    "progress_description_label": "Mô tả cập nhật tiến độ",
+    "title_placeholder": "Nhập tiêu đề vấn đề xung đột",
+    "description_placeholder": "Mô tả chi tiết về vấn đề xung đột",
+    "solution_placeholder": "Mô tả giải pháp để giải quyết vấn đề (nếu có)",
+    "progress_description_placeholder": "Mô tả chi tiết về tiến độ giải quyết vấn đề",
+    "status_new": "Mới",
+    "status_in_progress": "Đang xử lý",
+    "status_resolved": "Đã giải quyết",
+    "status_unknown": "Không xác định",
+    "create_success": "Tạo nhật ký xung đột thành công",
+    "update_success": "Cập nhật tiến độ thành công",
+    "cancel_button": "Hủy",
+    "save_log_button": "Lưu nhật ký",
+    "update_progress_button": "Cập nhật tiến độ",
+    "progress_resolution": "Tiến độ giải quyết",
+    "updates_section": "Cập nhật tiến độ",
+    "solution_section": "Giải pháp",
+    "record_solution": "Ghi nhật ký giải pháp",
+    "update_progress": "Cập nhật tiến độ",
+    "progress_min_value": "0%",
+    "progress_max_value": "100%"
+  },
   "TITLE": {
+    "conflict_log": "Nhật ký Xung đột",
+    "conflict_log_list": "Danh sách Nhật ký Xung đột",
+    "conflict_log_detail": "Chi tiết Nhật ký Xung đột",
+    "conflict_log_form": "Biểu mẫu Nhật ký Xung đột",
+    "conflict_log_new": "Nhật ký Xung đột Mới",
+    "conflict_log_progress": "Cập nhật Tiến độ",
+    "conflict_log_solution": "Giải pháp",
+    "conflict_log_status": "Trạng thái",
+    "conflict_log_date": "Ngày",
+    "no_conflict_logs": "Không có nhật ký xung đột nào",
     "phone": "Số điện thoại",
     "account": "Tài khoản",
     "email": "Email",
@@ -323,6 +372,7 @@
     "complete": "Hoàn thành",
     "create_new_survey": "Tạo khảo sát mới",
     "create_first_survey": "Tạo khảo sát đầu tiên",
+    "create_new_log": "Tạo Nhật ký Mới",
     "select": "Chọn",
     "share": "Chia sẻ"
   },
