feat(profile-page): Tích hợp user_settings, lựa chọn âm thanh nền, form cập nhật thông tin cá nhân

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -158,6 +158,7 @@
     "background": "Background",
     "default": "Default",
     "background_sound": "Background music sound",
+    "sound_effect": "Sound effect",
     "music": "Music",
     "notification": "Notification",
     "share": "Share",
@@ -225,7 +226,17 @@
     "discovery_level": "Discovery Level",
     "self_discovery_survey_questions": "Self Discovery Survey Questions",
     "discovery_points": "Points",
-    "no_self_discovery_survey_history": "No self discovery survey history yet"
+    "no_self_discovery_survey_history": "No self discovery survey history yet",
+    "name": "Name",
+    "gender":"Gender",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "state": "State",
+    "district": "District",
+    "precint": "Precint",
+    "street": "Street",
+    "setup_nickname": "Setup your nickname"
   },
   "VALIDATE": {
     "phone_required": "Please input your phone number.",
@@ -234,7 +245,11 @@
     "new_password_required": "Please input your new password.",
     "confirm_password_required": "Please confirm your new password.",
     "password_min_length": "Password must be at least 8 characters long.",
-    "passwords_not_match": "Passwords do not match."
+    "passwords_not_match": "Passwords do not match.",
+    "nickname_required": "Please input your Nickname.",
+    "name_required": "Please input your name.",
+    "email_required": "Please input your email address.",
+    "email_format": "Invalid email address."
   },
   "ALERT": {
     "default_header": "Notification",
@@ -272,7 +287,9 @@
     "password_changed_success": "Password changed successfully.",
     "task_complete_success": "Task completed successfully!",
     "task_complete_error": "Could not complete the task. Please try again.",
-    "answer_all_questions": "Please answer all questions before submitting."
+    "answer_all_questions": "Please answer all questions before submitting.",
+    "update_failed": "An error occurred while updating data. Please try again later.",
+    "update_success": "Data update successful."
   },
   "ERROR": {
     "network": "Network error. Please check your internet connection.",
